# trip-planner

./: .gitignore  LICENSE  PROJECT_STRUCTURE.md  README.md  compose.test.yml  compose.yml  docker-compose.yml  package-lock.json  package.json  requirements.txt  taskfile.yaml  tasks.md
.github/workflows/: deploy.yml  (+2 more)
components/backend/: Dockerfile  db.py  main.py  models.py  pyproject.toml  schemas.py  seed_partners.py  tasks.md
components/backend/core/: request_context.py
components/backend/docs/schemas/: flow_overview.mmd
components/backend/repositories/: events_repo.py  partner_places_repo.py  partners_repo.py  places_repo.py  query_place_repo.py  route_rules_repo.py  search_queries_repo.py  settlements_repo.py
components/backend/routers/: partner_events.py  partner_requests.py  partner_runtime.py
components/backend/services/: POIInfoService.py  auth_utils.py  collect_places.py  collect_places_guest.py  db_errors.py  gemini_handler.py  gemini_handler_guest.py  gemini_route_planner.py  geocoding.py  gigachat_route_planner.py  guest_context.py  parse_user_prompt.py  partner_access.py  partner_api.py  partner_auth.py  partner_inquiry_email.py  partner_mock_seed.py  partner_route_recommendations.py  place_external_ids.py  preferred_type_mappings.py  prompt_stub_handler.py  route_builder.py  route_context.py  route_generation.py  route_rendering.py  saved_routes.py  schema_fixes.py  search_text.py  user_login.py  user_profile_stubs.py  user_resgister.py  user_updater.py  yandex_geocoder.py  yandex_maps_key.py
components/backend/tests/: test_backend_units.py
(+155 files in other folders)
