[project]
name = "trip-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "boundary>=0.3.4",
    "dotenv>=0.9.9",
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "geoalchemy2>=0.18.0",
    "google-genai>=1.23.0",
    "google-generativeai>=0.8.5",
    "googlemaps>=4.10.0",
    "jwt>=1.4.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "pyproj>=3.7.2",
    "requests>=2.32.5",
    "shapely>=2.1.1",
    "sqlalchemy>=2.0.42",
    "sqlalchemy-orm>=1.2.10",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = []
research = [
    "requests>=2.32.3",
]
